--- a/client/views/accountButtons/accountButtons.html
+++ b/client/views/accountButtons/accountButtons.html
@@ -1,6 +1,19 @@
 <template name="entryAccountButtons">
   {{#if currentUser}}
-    {{> signedInTemplate}}
+
+    {{#if profileUrl}}
+      {{#wrapLinksLi}}
+        <a class='profileLink' href='{{profileUrl}}'>{{{beforeSignedInAs}}}{{signedInAs}}</a>
+      {{/wrapLinksLi}}
+    {{else}}
+      {{#wrapLinksLi}}
+        <p class="navbar-text">{{{beforeSignedInAs}}}{{signedInAs}}</p>
+      {{/wrapLinksLi}}
+    {{/if}}
+
+    {{#wrapLinksLi}}
+      <a href="/sign-out">{{{beforeSignOut}}}{{t9n "signOut"}}</a>
+    {{/wrapLinksLi}}
   {{else}}
 
     {{#wrapLinksLi}}
