--- a/client/views/forgotPassword/forgotPassword.html
+++ b/client/views/forgotPassword/forgotPassword.html
@@ -1,21 +1,21 @@
 <template name='entryForgotPassword'>
-  <div class="container">
-    <div class="row">
+  <div class="ui one column stackable center aligned page grid">
+    <div class="column eight wide">
       {{#if logo}}
         <div class="entry-logo">
             <a href="/"><img src="{{logo}}" alt="logo"></a>
         </div>
       {{/if}}
-      <div class="entry col-md-4 col-md-offset-4">
+      <div class="entry ui fluid form segment">
         {{#if error}}
-          <div class='alert alert-danger'>{{error}}</div>
+          <div class='ui red message'>{{error}}</div>
         {{/if}}
         <h3>{{t9n 'forgotPassword'}}</h3>
-        <form id='forgotPassword'>
-          <div class="form-group">
+        <form id='forgotPassword' class="ui left aligned">
+          <div class="field">
             <input type="email" name="forgottenEmail" class="form-control" placeholder="{{t9n 'emailAddress'}}" value=''>
           </div>
-          <button type="submit" class="btn btn-default">{{t9n 'emailResetLink'}}</button>
+          <button type="submit" class="ui blue submit button">{{t9n 'emailResetLink'}}</button>
         </form>
         {{#if showSignupCode}}
           <p class="entry-signup-cta">{{t9n 'dontHaveAnAccount'}} <a href="/sign-up">{{t9n 'signUp'}}</a></p>
