--- a/client/views/resetPassword/resetPassword.html
+++ b/client/views/resetPassword/resetPassword.html
@@ -1,21 +1,21 @@
 <template name='entryResetPassword'>
-  <div class="container">
+  <div class="ui one column stackable center aligned page grid">
     <div class="row">
       {{#if logo}}
         <div class="entry-logo">
             <a href="/"><img src="{{logo}}" alt="logo"></a>
         </div>
       {{/if}}
-      <div class="entry col-md-4 col-md-offset-4">
+      <div class="entry ui fluid form segment">
         {{#if error}}
-          <div class='alert alert-danger'>{{error}}</div>
+          <div class='ui red message'>{{error}}</div>
         {{/if}}
         <h3>{{t9n "resetYourPassword"}}</h3>
-        <form id='resetPassword'>
-          <div class="form-group">
+        <form id='resetPassword' class="ui align left">
+          <div class="field">
             <input type="password" name="new-password" class="form-control" value=''>
           </div>
-          <button type="submit" class="btn btn-default">{{t9n "updateYourPassword"}}</button>
+          <button type="submit" class="ui blue submit button">{{t9n "updateYourPassword"}}</button>
         </form>
         {{#if showSignupCode}}
           <p class="entry-signup-cta">{{t9n 'dontHaveAnAccount'}} <a href="/sign-up">{{t9n 'signUp'}}</a></p>
