--- a/client/views/signUp/signUp.html
+++ b/client/views/signUp/signUp.html
@@ -1,12 +1,12 @@
 <template name='entrySignUp'>
-  <div class="container">
-    <div class="row">
+  <div class="ui one column stackable center aligned page grid">
+    <div class="column eight wide">
       {{#if logo}}
         <div class="entry-logo">
             <a href="/"><img src="{{logo}}" alt="logo"></a>
         </div>
       {{/if}}
-      <div class="entry col-md-4 col-md-offset-4">
+      <div class="entry ui fluid form segment">
         <h3>{{t9n "createAccount"}}</h3>
         {{#if otherLoginServices}}
           <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="/sign-in">{{t9n "signin"}}</a>.</p>
@@ -28,16 +28,16 @@
         {{/if}}
         {{> entryError}}
         {{#if passwordLoginService}}
-          <form class="entry-form {{signupClass}}" id='signUp'>
+          <form class="entry-form {{signupClass}} ui left aligned" id='signUp'>
             {{#if showUsername}}
-              <div class="form-group">
+              <div class="field">
                 <label>{{t9n "username"}}</label>
                 <input autofocus name="username" type="string" class="form-control" value=''>
               </div>
             {{/if}}
 
             {{#if showEmail}}
-              <div class="form-group">
+              <div class="field">
                 <label>{{t9n "emailAddress"}}</label>
                 {{#if showUsername}}
                   <input type="email" class="form-control" value='{{emailAddress}}'>
@@ -47,20 +47,19 @@
               </div>
             {{/if}}
 
-            <div class="form-group">
+            <div class="field">
               <label>{{t9n "password"}}</label>
               <input type="password" class="form-control" value=''>
             </div>
 
             {{#if showSignupCode}}
-              <div class="form-group">
+              <div class="field">
                 <label>{{t9n "signupCode"}}</label>
                 <input name="signupCode" type="string" class="form-control" value=''>
               </div>
             {{/if}}
 
-            {{> entryExtraSignUpFields}}
-            <button type="submit" class="submit btn btn-block btn-default">{{t9n "signUp"}}</button>
+            <button type="submit" class="ui blue submit button">{{t9n "signUp"}}</button>
           </form>
         {{/if}}
         {{#if both}}
