--- a/client/views/social/social.html
+++ b/client/views/social/social.html
@@ -1,9 +1,9 @@
 <template name='entrySocial'>
-  <button class="btn" id="entry-{{this}}" name="{{this}}">
+  <button class="ui {{this}}{{plus}} button segment" id="entry-{{this}}" name="{{this}}">
     {{#if unconfigured}}
-      <i class="fa fa-{{icon}}"></i> {{t9n "configure"}} {{capitalize this}}
+      <i class="{{this}}{{plus}} icon"></i> {{t9n "configure"}} {{capitalize this}}
     {{else}}
-      <i class="fa fa-{{icon}}"></i> {{t9n "sign"}} {{buttonText}} {{t9n "with"}} {{capitalize this}}
+      <i class="{this}}{{plus}} icon"></i> {{t9n "sign"}} {{buttonText}} {{t9n "with"}} {{capitalize this}}
     {{/if}}
   </button>
 </template>
