--- a/client/views/signUp/signUp.html
+++ b/client/views/signUp/signUp.html
@@ -59,6 +59,7 @@
               </div>
             {{/if}}
 
+            {{> entryExtraSignUpFields}}
             <button type="submit" class="ui blue submit button">{{t9n "signUp"}}</button>
           </form>
         {{/if}}
